tests/ui/parser/issues/issue-81804.rs
fn main() {}

//~vv ERROR mismatched closing delimiter: `}`
//~v ERROR this file contains an unclosed delimiter
fn p([=(}
